small bug fix for jumping elements

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -30,6 +30,11 @@
 
 .panel-body {
   padding: 5px !important;
+  line-height: 2em;
+}
+
+.panel {
+  margin-bottom: 2px !important;
 }
 
 .chatbox {
